Profile info and page description were add to first section

--- a/index.html
+++ b/index.html
@@ -7,96 +7,129 @@
     <link rel="stylesheet" href="./css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Manrope:wght@200..800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>
-        <figure class="logo-container">
-            <img src="https://assets-global.website-files.com/656599b7d006b23a39ab1e36/656e2c562e7b86dbaf9320d8_Logo_full.svg" alt="Logo" class="logo">
-        </figure>
-        <nav class="navbar">
-            <ul>
-                <li>
-                    <a href="#" class="active">
-                        <span>
-                            <p>Home</p>
-                            <p>Home</p>
-                            <p>Home</p>
-                        </span>
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        <span>
-                            <p>About</p>
-                            <p>About</p>
-                            <p>About</p>
-                        </span>
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        <span>
-                            <p>Cases</p>
-                            <p>Cases</p>
-                            <p>Cases</p>
-                        </span>
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        <span>
-                            <p>Articles</p>
-                            <p>Articles</p>
-                            <p>Articles</p>
-                        </span>
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        <span>
-                            <p>Contract</p>
-                            <p>Contract</p>
-                            <p>Contract</p>
-                        </span>
-                    </a>
-                </li>
-            </ul>
-        </nav>
-        <div class="header-social">
-            <div class="available">
-                <div class="available-icon-container">
-                    <div class="available-icon-point"></div>
-                    <div class="available-icon-circle"></div>
-                </div>
-                <p>Available</p>
-            </div>
-            <nav class="header-social">
+    <section class="section-1">
+        <div class="background-gradient"></div>
+        <img src="./assets/circles.svg" alt="circles" class="circles">
+        <header>
+            <figure class="logo-container">
+                <img src="https://assets-global.website-files.com/656599b7d006b23a39ab1e36/656e2c562e7b86dbaf9320d8_Logo_full.svg" alt="Logo" class="logo">
+            </figure>
+            <nav class="navbar">
                 <ul>
                     <li>
-                        <a href="#" class="social-icon dribbble">
-                            <i class="fa-brands fa-dribbble"></i>
+                        <a href="#" class="active">
+                            <span>
+                                <p>Home</p>
+                                <p>Home</p>
+                                <p>Home</p>
+                            </span>
                         </a>
                     </li>
                     <li>
-                        <a href="#" class="social-icon behance">
-                            <i class="fa-brands fa-behance"></i>
+                        <a href="#">
+                            <span>
+                                <p>About</p>
+                                <p>About</p>
+                                <p>About</p>
+                            </span>
                         </a>
                     </li>
                     <li>
-                        <a href="#" class="social-icon linkedin">
-                            <i class="fa-brands fa-linkedin-in"></i>
+                        <a href="#">
+                            <span>
+                                <p>Cases</p>
+                                <p>Cases</p>
+                                <p>Cases</p>
+                            </span>
                         </a>
                     </li>
                     <li>
-                        <a href="#" class="social-icon medium">
-                            <i class="fa-brands fa-medium"></i>
+                        <a href="#">
+                            <span>
+                                <p>Articles</p>
+                                <p>Articles</p>
+                                <p>Articles</p>
+                            </span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <span>
+                                <p>Contract</p>
+                                <p>Contract</p>
+                                <p>Contract</p>
+                            </span>
                         </a>
                     </li>
                 </ul>
             </nav>
+            <div class="header-social">
+                <div class="available">
+                    <div class="available-icon-container">
+                        <div class="available-icon-point"></div>
+                        <div class="available-icon-circle"></div>
+                    </div>
+                    <p>Available</p>
+                </div>
+                <nav class="header-social">
+                    <ul>
+                        <li>
+                            <a href="#" class="social-icon dribbble">
+                                <i class="fa-brands fa-dribbble"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" class="social-icon behance">
+                                <i class="fa-brands fa-behance"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" class="social-icon linkedin">
+                                <i class="fa-brands fa-linkedin-in"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" class="social-icon medium">
+                                <i class="fa-brands fa-medium"></i>
+                            </a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+        </header>
+        <div class="section-1-container">
+            <div class="profile-container">
+                <img src="./assets/profile-photo.png" alt="Profile photo">
+                <p>Hello! I’m Dmitry</p>
+                <h3>DIGITAL PRODUCT DESIGNER</h3>
+            </div>
+            <h2>
+                <span>Crafting </span>
+                <span class="blue">Useful Experiences </span>
+                <span>for Digital products</span>
+            </h2>
+            <p class="section-1-description">I develop innovative solutions by identifying the problem that needs addressing and creating a meaningful experience that meets the needs of end-users, aligning it with the context in which the product will be used.</p>
+            <div class="buttons">
+                <a href="" class="button button-type-1">
+                    <span>
+                        <p>Let's talk</p>
+                        <p>Let's talk</p>
+                        <p>Let's talk</p>
+                    </span>
+                </a>
+                <a href="" class="button button-type-2">
+                    <span>
+                        <p>Learn more</p>
+                        <p>Learn more</p>
+                        <p>Learn more</p>
+                    </span>
+                </a>
+            </div>
         </div>
-    </header>
+    </section>
     <script src="https://kit.fontawesome.com/bd19b94ad7.js" crossorigin="anonymous"></script>
 </body>
 </html>
