Images were add to local files and two sections were create.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <img src="./assets/circles.svg" alt="circles" class="circles">
         <header>
             <figure class="logo-container">
-                <img src="https://assets-global.website-files.com/656599b7d006b23a39ab1e36/656e2c562e7b86dbaf9320d8_Logo_full.svg" alt="Logo" class="logo">
+                <img src="./assets/dmitri_logo.svg" alt="Logo" class="logo">
             </figure>
             <nav class="navbar">
                 <ul>
@@ -129,6 +129,42 @@
                 </a>
             </div>
         </div>
+    </section>
+    <section class="section-2 white">
+        <h3>Nice to meet you!</h3>
+        <div class="section-info">
+            <div class="info-text">
+                <p>I assist startups in making valuable design decisions at every stage of the product life cycle, from introduction to the growth phase. My deep understanding of business needs at each step enables me to deliver the right solutions more quickly, thereby accelerating innovation.</p>
+            </div>
+            <div class="additional-info">
+                <p>My concept of exceptional product design involves a user-centered approach that aligns with business needs and incorporates a strong, compelling visual language.</p>
+            </div>
+        </div>
+        <a href="" class="big-button black">
+            <div class="button-info">
+                <p>Learn more</p>
+                <i class="fa-solid fa-arrow-up-right-from-square"></i>
+            </div>
+            <div class="circle"></div>
+        </a>
+    </section>
+    <section class="section-3 black">
+        <div class="section-info">
+            <div class="additional-info">
+                <h3>WHAT I DO</h3>
+            </div>
+            <div class="info-text">
+                <h2>Industries</h2>
+                <p>I am passionate about designing and developing straightforward and honest products that enhance people's lives, achieved through teamwork. With more than five years of experience in digital product design, my focus is primarily on complex products and robust design systems.</p>
+            </div>
+        </div>
+        <a href="" class="big-button blue">
+            <div class="button-info">
+                <p>Learn more</p>
+                <i class="fa-solid fa-arrow-up-right-from-square"></i>
+            </div>
+            <div class="circle"></div>
+        </a>
     </section>
     <script src="https://kit.fontawesome.com/bd19b94ad7.js" crossorigin="anonymous"></script>
 </body>
