Topics section and subtopics section added.

--- a/index.html
+++ b/index.html
@@ -166,6 +166,236 @@
             <div class="circle"></div>
         </a>
     </section>
+    <section class="topics black">
+        <div class="topic-title">
+            <p>01</p>
+            <h2>FinTech & Banking</h2>
+        </div>
+        <div class="topic-description">
+            <p>In the fast-paced and ever-changing world of financial technology, I specialize in crafting user-centric designs that enable effortless management of personal finances. My expertise ranges from developing intuitive banking apps to creating secure payment platforms, all designed to bolster user trust, convenience, and financial wellness.</p>
+            <div class="topic-tags">
+                <p class="tag">Bookkeping app</p>
+                <p class="tag">Fintech services</p>
+                <p class="tag">KYC Process</p>
+                <p class="tag">Digital Banking</p>
+                <p class="tag">Mobile Payments</p>
+                <p class="tag">Insurance app</p>
+                <p class="tag">Mobile Banking</p>
+                <p class="tag">SaaS</p>
+                <p class="tag">Digital Wallet</p>
+                <p class="tag">Sales Analythics</p>
+            </div>
+        </div>
+    </section>
+    <section class="topics black">
+        <div class="topic-title">
+            <p>02</p>
+            <h2>Edtech</h2>
+        </div>
+        <div class="topic-description">
+            <p>I am deeply passionate about revolutionizing education through innovative design. My Edtech solutions turn complex learning materials into engaging, accessible digital experiences. My focus lies in developing interactive learning interfaces, ensuring intuitive navigation, and leveraging data-driven insights to significantly enhance educational outcomes.</p>
+            <div class="topic-tags">
+                <p class="tag">Testing & Assessment Software</p>
+                <p class="tag">Educational Metaverse</p>
+                <p class="tag">Learning Management System</p>
+                <p class="tag">Online Learning Platforms</p>
+                <p class="tag">Online Courses</p>
+                <p class="tag">Design Guidelines</p>
+                <p class="tag">Educational Apps</p>
+                <p class="tag">Gamification</p>
+                <p class="tag">Corporate Training</p>
+                <p class="tag">E-Learning</p>
+            </div>
+        </div>
+    </section>
+    <section class="topics black">
+        <div class="topic-title">
+            <p>03</p>
+            <h2>Healtcare</h2>
+        </div>
+        <div class="topic-description">
+            <p>In the healthcare sector, I specialize in designing digital solutions that prioritize user health and well-being. My designs are aimed at streamlining healthcare access, enhancing patient engagement, and ensuring the utmost data security and compliance.</p>
+            <div class="topic-tags">
+                <p class="tag">Remote Patient Monitoring</p>
+                <p class="tag">Healthcare Analytics</p>
+                <p class="tag">Health App</p>
+                <p class="tag">Healthcare Mobile Apps</p>
+            </div>
+        </div>
+    </section>
+    <section class="topics black">
+        <div class="topic-title">
+            <p>04</p>
+            <h2>E-commerce</h2>
+        </div>
+        <div class="topic-description">
+            <p>The key to a successful online business lies in establishing a robust virtual presence that not only meets user expectations but also drives conversions. In this realm, I design innovative solutions for e-commerce businesses, crafting intuitive interfaces that enhance customer interaction and incorporating user-friendly navigation features to boost conversion rates.</p>
+            <div class="topic-tags">
+                <p class="tag">Marketplaces</p>
+                <p class="tag">CRM</p>
+                <p class="tag">B2C</p>
+                <p class="tag">Product Websites</p>
+                <p class="tag">B2B</p>
+                <p class="tag">Vendor Portal</p>
+                <p class="tag">Sales Portal</p>
+                <p class="tag">PoS systems</p>
+            </div>
+        </div>
+    </section>
+    <section class="topics black">
+        <div class="topic-title">
+            <p>05</p>
+            <h2>Real Estate</h2>
+        </div>
+        <div class="topic-description">
+            <p>The realm of real estate technology requires immersive and user-friendly designs. I develop digital experiences that simplify property searches, streamline transactions, and offer comprehensive property information. My designs significantly enhance the real estate journey for buyers, sellers, and agents.</p>
+            <div class="topic-tags">
+                <p class="tag">Real Estate Apps</p>
+                <p class="tag">Crypto Real Estate Platform</p>
+            </div>
+        </div>
+    </section>
+    <section class="topics black">
+        <div class="topic-title">
+            <p>06</p>
+            <h2>Web 3.0 & Blockchain applications</h2>
+        </div>
+        <div class="topic-description">
+            <p>Embrace the decentralized future with my specialized expertise in Web 3.0 and blockchain interface design. I create intuitive and secure blockchain applications and decentralized platforms, emphasizing transparency, trust, and usability. My designs enable seamless user engagement with the blockchain ecosystem. In the dynamic world of non-fungible tokens (NFTs) and cryptocurrencies, I expertly craft user interfaces that streamline trading, investing, and NFT creation. My designs are centered on security and simplicity, empowering users to confidently navigate the rapidly evolving world of digital assets.</p>
+            <div class="topic-tags">
+                <p class="tag">Crypto Wallet</p>
+                <p class="tag">Crypto Real Estate</p>
+                <p class="tag">Web 3.0</p>
+                <p class="tag">NFT Marketplaces</p>
+                <p class="tag">Tokenization</p>
+            </div>
+        </div>
+    </section>
+    <section class="topics black">
+        <div class="topic-title">
+            <p>07</p>
+            <h2>AI interface design</h2>
+        </div>
+        <div class="topic-description">
+            <p>Artificial Intelligence (AI) is revolutionizing various industries. I am adept at designing AI-driven interfaces that leverage the capabilities of machine learning, natural language processing, and computer vision. My designs are focused on optimizing user interactions with AI-powered systems, thereby making technology more intuitive and accessible.</p>
+            <div class="topic-tags">
+                <p class="tag">Collaborative Interfaces</p>
+                <p class="tag">AI Image Generator</p>
+                <p class="tag">AI Chat</p>
+                <p class="tag">Voice user interfaces</p>
+                <p class="tag">Chatbots</p>
+                <p class="tag">AI Assistants</p>
+                <p class="tag">Machine Learning Platforms</p>
+                <p class="tag">AI research assistant</p>
+            </div>
+        </div>
+    </section>
+    <section class="topics white">
+        <div class="topic-title">
+            <div class="section-info">
+                <div class="info-text">
+                    <h2>Industries</h2>
+                    <p>I am passionate about designing and developing straightforward and honest products that enhance people's lives, achieved through teamwork. With more than five years of experience in digital product design, my focus is primarily on complex products and robust design systems.</p>
+                </div>
+            </div>
+            <a href="" class="big-button blue">
+                <div class="button-info">
+                    <p>Let's talk</p>
+                    <i class="fa-solid fa-arrow-up-right-from-square"></i>
+                </div>
+                <div class="circle"></div>
+            </a>
+        </div>
+        <div class="topic-description sub-topics">
+            <div class="sub-topic">
+                <h3>User Experience Design</h3>
+                <p>Elevate your digital products with a user-centric design approach that guarantees intuitive and delightful user experiences. I am skilled in crafting interfaces that seamlessly guide users through your application, resulting in increased engagement and higher conversion rates. Overcome complex navigation challenges and significantly boost user satisfaction.</p>
+                <div class="topic-tags">
+                    <p class="tag">Information Architecture</p>
+                    <p class="tag">UX Audit</p>
+                    <p class="tag">User personas</p>
+                    <p class="tag">Design Thinking</p>
+                    <p class="tag">Wireframing</p>
+                    <p class="tag">Empathy mapping</p>
+                    <p class="tag">User stories</p>
+                    <p class="tag">A/B Testing</p>
+                    <p class="tag">Competitive Analysis</p>
+                    <p class="tag">Customer Journey Mapping</p>
+                    <p class="tag">User Flows</p>
+                </div>
+            </div>
+            <div class="sub-topic">
+                <h3>User Interface Design</h3>
+                <p>Transform your concepts into visually stunning interfaces with my design expertise. I am dedicated to creating attractive, user-friendly interfaces that align seamlessly with your brand identity. I give meticulous attention to every pixel, ensuring that your product is not only visually appealing but also intuitively usable.</p>
+                <div class="topic-tags">
+                    <p class="tag">Interaction Design</p>
+                    <p class="tag">Design Guidelines</p>
+                    <p class="tag">Design system</p>
+                    <p class="tag">Mobile Design</p>
+                    <p class="tag">Usability Testing</p>
+                    <p class="tag">Components Library</p>
+                    <p class="tag">Responsive layouts</p>
+                    <p class="tag">Accessibility Design</p>
+                    <p class="tag">Design Specifications</p>
+                    <p class="tag">Visual Hierarchy</p>
+                </div>
+            </div>
+            <div class="sub-topic">
+                <h3>Web Application & SaaS</h3>
+                <p>Whether you are developing a web application or a SaaS platform, my design expertise guarantees that your product will align seamlessly with your business objectives and user requirements. I specialize in crafting user interfaces that are optimized for functionality, scalability, and ease of user adoption.</p>
+                <div class="topic-tags">
+                    <p class="tag">User Research</p>
+                    <p class="tag">Accessibility Design</p>
+                    <p class="tag">User Onboarding</p>
+                    <p class="tag">Information Architecture</p>
+                    <p class="tag">Dashboard</p>
+                    <p class="tag">Sitemap</p>
+                    <p class="tag">Data Visualization</p>
+                    <p class="tag">User-oriented design</p>
+                    <p class="tag">Business-Oriented Design</p>
+                </div>
+            </div>
+            <div class="sub-topic">
+                <h3>MVP Design from scratch</h3>
+                <p>Rapidly validate your product concept using a Minimum Viable Product (MVP). I assist in prioritizing features, designing a streamlined MVP, and guiding you through the launch process, thereby ensuring a cost-effective and swift path to market.</p>
+                <div class="topic-tags">
+                    <p class="tag">Feature Prioritization</p>
+                    <p class="tag">Prototyping</p>
+                    <p class="tag">Data Visualization</p>
+                    <p class="tag">Design from scratch</p>
+                    <p class="tag">Wireframing</p>
+                    <p class="tag">Pitch Deck design</p>
+                    <p class="tag">Investor Presentation Design</p>
+                    <p class="tag">Product Launch</p>
+                </div>
+            </div>
+            <div class="sub-topic">
+                <h3>MVP Design from scratch</h3>
+                <p>Revitalize your digital product with my specialized Product Redesign & Improvement service. I focus on user-centric design, usability enhancements, intuitive information architecture, and striking visual transformation. The benefits of this service include a significantly enhanced user experience, gaining a competitive edge, improved conversion rates, better accessibility, and a dedicated commitment to continuous improvement.</p>
+                <div class="topic-tags">
+                    <p class="tag">Product redesign</p>
+                    <p class="tag">Visual Design</p>
+                    <p class="tag">UX optimization</p>
+                    <p class="tag">Revolutionary Site Redesign</p>
+                    <p class="tag">Creating site architecture</p>
+                    <p class="tag">UX/UI redesign</p>
+                    <p class="tag">Feature implementation</p>
+                </div>
+            </div>
+            <div class="sub-topic">
+                <h3>Wireframing and Prototyping</h3>
+                <p>The wireframing process forms the essential foundation for effective digital solutions. I develop wireframes that delineate the structure and functionality of your application, guaranteeing a logical flow and high usability. Such strategic planning effectively minimizes development hiccups and significantly maximizes user satisfaction. Additionally, I create dynamic prototypes that offer a tangible preview of the end product, aiding in refining your vision and securing stakeholder buy-in.</p>
+                <div class="topic-tags">
+                    <p class="tag">High-Fidelity Wireframes</p>
+                    <p class="tag">Prototype</p>
+                    <p class="tag">User Flow</p>
+                    <p class="tag">Figma</p>
+                    <p class="tag">Clickable Prototypes</p>
+                    <p class="tag">Concept</p>
+                </div>
+            </div>
+        </div>
+    </section>
     <script src="https://kit.fontawesome.com/bd19b94ad7.js" crossorigin="anonymous"></script>
 </body>
 </html>
