Recent work section added and main.js file created.

--- a/index.html
+++ b/index.html
@@ -396,6 +396,118 @@
             </div>
         </div>
     </section>
+    <section class="topics recent-work black">
+        <h2>Recent Work</h2>
+        <p>I am continually eager to take on new challenges, collaborating with individuals and companies to bring their product ideas to life.</p>
+        <a href="" class="big-button blue">
+            <div class="button-info">
+                <p>Let's talk</p>
+                <i class="fa-solid fa-arrow-up-right-from-square"></i>
+            </div>
+            <div class="circle"></div>
+        </a>
+    </section>
+    <section class="list black">
+        <ul>
+            <li>
+                <a href="#">
+                    <div class="list-item">
+                        <h2>Real Estate Marketplace</h2>
+                    </div>
+                    <div class="list-item">
+                        <p>User Experience Design</p>
+                    </div>
+                    <div class="list-item">
+                        <p>Real State</p>
+                    </div>
+                    <div class="list-item">
+                        <p>2023</p>
+                    </div>
+                </a>
+            </li>
+            <li>
+                <a href="">
+                    <div class="list-item">
+                        <h2>NFT Marketplace</h2>
+                    </div>
+                    <div class="list-item">
+                        <p>UX Research</p>
+                    </div>
+                    <div class="list-item">
+                        <p>Web 3.0 & Blockchain App</p>
+                    </div>
+                    <div class="list-item">
+                        <p>2022</p>
+                    </div>
+                </a>
+            </li>
+            <li>
+                <a href="">
+                    <div class="list-item">
+                        <h2>Bookkeeping AI</h2>
+                    </div>
+                    <div class="list-item">
+                        <p>Web Application & SaaS</p>
+                    </div>
+                    <div class="list-item">
+                        <p>FinTech & Banking</p>
+                    </div>
+                    <div class="list-item">
+                        <p>2021</p>
+                    </div>
+                </a>
+            </li>
+            <li>
+                <a href="">
+                    <div class="list-item">
+                        <h2>AI Omnichannel</h2>
+                    </div>
+                    <div class="list-item">
+                        <p>User Experience Design</p>
+                    </div>
+                    <div class="list-item">
+                        <p>Web Application & SaaS</p>
+                    </div>
+                    <div class="list-item">
+                        <p>2021</p>
+                    </div>
+                </a>
+            </li>
+            <li>
+                <a href="">
+                    <div class="list-item">
+                        <h2>SaaS Finance App</h2>
+                    </div>
+                    <div class="list-item">
+                        <p>Web Application & SaaS</p>
+                    </div>
+                    <div class="list-item">
+                        <p>FinTech & Banking</p>
+                    </div>
+                    <div class="list-item">
+                        <p>2020</p>
+                    </div>
+                </a>
+            </li>
+            <div class="project-view">
+                <div class="project-images">
+                    <img src="./assets/project-1.png" alt="">
+                    <img src="./assets/project-2.png" alt="">
+                    <img src="./assets/project-3.png" alt="">
+                    <img src="./assets/project-4.png" alt="">
+                    <img src="./assets/project-5.png" alt="">
+                </div>
+                <div class="view-circle">
+                    <p>view</p>
+                </div>
+            </div>
+        </ul>
+    </section>
+    <section class="topics recent-work black">
+        <h2>Testimonials</h2>
+        <p>At the core of my professional ethos is a deep-seated commitment to not only meet but also exceed my clients' expectations. I hold the conviction that the most authentic testament to my skills and dedication is mirrored in the testimonials of those I have collaborated with. In this section, it is my privilege to present the experiences and feedback from my esteemed clients.</p>
+    </section>
+    <script src="./js/main.js"></script>
     <script src="https://kit.fontawesome.com/bd19b94ad7.js" crossorigin="anonymous"></script>
 </body>
 </html>
