Cards added to create Testimonials section

--- a/index.html
+++ b/index.html
@@ -503,9 +503,44 @@
             </div>
         </ul>
     </section>
-    <section class="topics recent-work black">
+    <section class="topics recent-work testimonials black">
         <h2>Testimonials</h2>
         <p>At the core of my professional ethos is a deep-seated commitment to not only meet but also exceed my clients' expectations. I hold the conviction that the most authentic testament to my skills and dedication is mirrored in the testimonials of those I have collaborated with. In this section, it is my privilege to present the experiences and feedback from my esteemed clients.</p>
+        <div class="testimonial-cards">
+            <div class="testimonial-card">
+                <p>"Dmitry's product sense and design implementation are very high level. From the beginning our collaboration has been seemless. He would take my feedback, notes etc and we were able to work asynchronously, iterating until the designs he produced met my needs."</p>
+                <div class="testimonial-info">
+                    <img src="./assets/person-1.png" alt="">
+                    <div class="testimonial-people-data">
+                        <p class="name">Joshua Anderson</p>
+                        <p class="role">Founder & CEO | UserNurture</p>
+                    </div>
+                </div>
+                <img src="./assets/figure.svg" alt="">
+            </div>
+            <div class="testimonial-card">
+                <p>"Dmitry is very professional and well-organised with his work, he was also very helpful to streamline our creative ideas into working structure. Great work! Thank you."</p>
+                <div class="testimonial-info">
+                    <img src="./assets/person-2.png" alt="">
+                    <div class="testimonial-people-data">
+                        <p class="name">Taya Bonicos</p>
+                        <p class="role">Founder | Serena</p>
+                    </div>
+                </div>
+                <img src="./assets/figure.svg" alt="">
+            </div>
+            <div class="testimonial-card">
+                <p>"Working with Dmitry on project was an incredibly rewarding experience. His role as a digital product designer was marked by a remarkable fusion of creativity and technical prowess. Right from the beginning, Dmitry exhibited a blending aesthetics and functionality seamlessly."</p>
+                <div class="testimonial-info">
+                    <img src="./assets/person-3.png" alt="">
+                    <div class="testimonial-people-data">
+                        <p class="name">Valeria Savina</p>
+                        <p class="role">Product designer | NOAH</p>
+                    </div>
+                </div>
+                <img src="./assets/figure.svg" alt="">
+            </div>
+        </div>
     </section>
     <script src="./js/main.js"></script>
     <script src="https://kit.fontawesome.com/bd19b94ad7.js" crossorigin="anonymous"></script>
