Projects gallery section added

--- a/index.html
+++ b/index.html
@@ -542,6 +542,52 @@
             </div>
         </div>
     </section>
+    <section class="projects-gallery white">
+        <div class="projects-row projects-row-1">
+            <a href="" class="project-container">
+                <img src="./assets/project-6.png" alt="" class="project-image">
+            </a>
+            <a href="" class="project-container">
+                <img src="./assets/project-7.png" alt="" class="project-image">
+            </a>
+            <a href="" class="project-container">
+                <img src="./assets/project-8.png" alt="" class="project-image">
+            </a>
+        </div>
+        <div class="projects-row projects-row-2">
+            <a href="" class="project-container">
+                <img src="./assets/project-9.png" alt="" class="project-image">
+            </a>
+            <a href="" class="project-container">
+                <img src="./assets/project-10.png" alt="" class="project-image">
+            </a>
+            <a href="" class="project-container">
+                <img src="./assets/project-11.png" alt="" class="project-image">
+            </a>
+        </div>
+        <div class="projects-row projects-row-3">
+            <a href="" class="project-container">
+                <img src="./assets/project-12.png" alt="" class="project-image">
+            </a>
+            <a href="" class="project-container">
+                <img src="./assets/project-13.png" alt="" class="project-image">
+            </a>
+            <a href="" class="project-container">
+                <img src="./assets/project-14.png" alt="" class="project-image">
+            </a>
+        </div>
+        <a href="" class="big-button projects-gallery-button black">
+            <div class="button-info">
+                <p>Learn more</p>
+                <i class="fa-solid fa-arrow-up-right-from-square"></i>
+            </div>
+        </a>
+        
+    </section>
+    <img src="./assets/wave.svg" alt="" class="wave">
+    <footer>
+        camello
+    </footer>
     <script src="./js/main.js"></script>
     <script src="https://kit.fontawesome.com/bd19b94ad7.js" crossorigin="anonymous"></script>
 </body>
